# essential-MLP

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: Neuron.cpp.7A45BB1DFBB71831.idx  Neuron.hpp.367753609186464A.idx  main.cpp.B717F5636AA34610.idx  test_neuron.cpp.0BD4CE1C94A9A287.idx
docs/: BackPropagation.md
include/: Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp
include/utils/: MatrixToVector.hpp  MultiplyMatrix.hpp
src/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
src/utils/: MatrixToVector.cpp  MultiplyMatrix.cpp
tests/: CMakeLists.txt  test_feed_forward.cpp  test_matrix.cpp  test_neural_network.cpp  test_neuron.cpp
tests/integration/: test_integration.cpp
tests/unit/: test_neural_network.cpp
